--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,22 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# 忽略node_modules目录
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# 忽略日志文件
+*.log
 
-# testing
-/coverage
+# 忽略环境变量文件
+.env
 
-# production
-/build
-
-# misc
+# 忽略操作系统生成的文件
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# 忽略编译输出
+dist/
+build/
+
+# 忽略IDE和编辑器的配置文件
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
