完成基本登录注册页面

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,2 @@
-# 忽略node_modules目录
-node_modules/
-
-# 忽略日志文件
-*.log
-
-# 忽略环境变量文件
-.env
-
-# 忽略操作系统生成的文件
-.DS_Store
-Thumbs.db
-
-# 忽略编译输出
-dist/
-build/
-
-# 忽略IDE和编辑器的配置文件
-.vscode/
-.idea/
-*.sublime-workspace
-*.sublime-project
+/.venv/
+/node_modules/
